; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..file_path_special.c_fill_pathname_application_data.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..file_path_special.c_fill_pathname_application_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"XDG_CONFIG_HOME\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"retroarch/\00", align 1
@.str.3 = private unnamed_addr constant [19 x i8] c".config/retroarch/\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fill_pathname_application_data(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = call i8* @getenv(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  store i8* %8, i8** %6, align 8
  %9 = call i8* @getenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  store i8* %9, i8** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @fill_pathname_join(i8* %13, i8* %14, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i64 %15)
  store i32 1, i32* %3, align 4
  br label %26

17:                                               ; preds = %2
  %18 = load i8*, i8** %7, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %25

20:                                               ; preds = %17
  %21 = load i8*, i8** %4, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i64, i64* %5, align 8
  %24 = call i32 @fill_pathname_join(i8* %21, i8* %22, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0), i64 %23)
  store i32 1, i32* %3, align 4
  br label %26

25:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %20, %12
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @fill_pathname_join(i8*, i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
